<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:staggered="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearlayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_texture"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0"
        android:background="@drawable/bg_list"
        android:orientation="vertical" >

        <include
            android:id="@+id/title_bar"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            layout="@layout/titlebar_layout" />

        <include
            android:id="@+id/head_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/note_guide_layout"
            android:visibility="gone" />

        <ListView
            android:id="@+id/notes_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:paddingLeft="9dp"
            android:scrollbarFadeDuration="1000"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="vertical" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/note_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bottom_bar"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="90dp"
        android:paddingStart="90dp" >

        <Button
            android:id="@+id/new_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/new_btn_bg"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/new_notes_label"
            android:textAllCaps="false"
            android:textColor="@color/operate_layout_text_color"
            android:textSize="@dimen/operate_layout_text_size" />

        <Button
            android:id="@+id/to_delete_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/btn_delete_bg"
            android:ellipsize="end"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/menu_delete"
            android:textAllCaps="false"
            android:textColor="@color/operate_layout_text_color"
            android:textSize="@dimen/operate_layout_text_size" />

        <Button
            android:id="@+id/delete_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/btn_delete_bg"
            android:ellipsize="end"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/operate_layout_text_color"
            android:textSize="@dimen/operate_layout_text_size"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>